--- a/css/quiz.css
+++ b/css/quiz.css
@@ -26,15 +26,24 @@
   background: #FFCC66;
 }
 
+.body_class_white {
+  background: #FFF;
+}
+
+.body_class_blk {
+  background: #707070;
+}
+
 #countdown {
   width: 100px;
   height: 65px;
   margin-top: 15px;
   padding-top: -5px;
   float: left;
-  font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
-  font-size: 50px;
-  font-weight:bold;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+  /*font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;*/
+  font-size: 45px;
+  /*font-weight:bold;*/
   color: red;
    /*background-color: #66ff66;*/
    text-align: center;
@@ -125,7 +134,8 @@
 }
 
 li {
-  font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+  /*font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;*/
   font-size: 30px;
   text-align: left;
   color: #99CC00;
@@ -225,6 +235,10 @@ div[class*="emphasize-"] {
   margin-top: -20px;
 }
 
+.margin_top_button{
+  margin-top: 15px;
+}
+
 .margin_top_btm_15{
   margin-top: 15px;
   margin-bottom: 15px;
@@ -246,4 +260,6 @@ div[class*="emphasize-"] {
     border-radius: 25px;
   }
 
-/*a:hover { background-color: transparent; text-decoration: none; }*/
+.add_space_between {
+    padding: 5px;
+}
