updated fonts on images etc

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -83,7 +83,7 @@ color: #999999;
 .font_planet_para, .font_country_para, .font_species_para, .font_cities_para{
  font-family: "Trebuchet MS", Arial, Verdana;
 font-size: 10pt;
-color: #B8B8B8;
+color: #A8A8A8;
 }
 
 .font_planet_para_bold{
