--- a/css/dragdrop_pairs.css
+++ b/css/dragdrop_pairs.css
@@ -71,8 +71,7 @@
 	width: 610px;
 	height: 620px;
 	background-color: #E0E0E0;
-	border: 4px dashed #B8B8B8;
-	border-radius: 25px;
+  border: 2px solid #B8B8B8;
 	float: left;
 	margin-left: 30px;
 	/*margin-top: 70px;
@@ -83,8 +82,8 @@
   width: 610px;
   height: 620px;
   background-color: #E0E0E0;
-  border: 4px dashed #B8B8B8;
-  border-radius: 25px;
+  border: 2px solid #B8B8B8;
+  
   float: left;
   margin-left: 30px;
   /*margin-top: 70px;
@@ -95,8 +94,7 @@
   width: 610px;
   height: 620px;
   background-color: #E0E0E0;
-  border: 4px dashed #B8B8B8;
-  border-radius: 25px;
+  border: 2px solid #B8B8B8;
   float: left;
   margin-left: 30px;
   /*margin-top: 70px;
@@ -107,8 +105,7 @@
   width: 610px;
   height: 620px;
   background-color: #E0E0E0;
-  border: 4px dashed #B8B8B8;
-  border-radius: 25px;
+  border: 2px solid #B8B8B8;
   float: left;
   margin-left: 30px;
   /*margin-top: 70px;
