--- a/css/note_species.css
+++ b/css/note_species.css
@@ -17,7 +17,7 @@
   right: 0;
   border-width: 0 36px 36px 0;
   border-style: solid;
-  border-color: #CCCCFF#CCCCFF #F0F0F0 #658E15;
+  border-color: #CDC673 #CDC673 #F0F0F0 #658E15;
   background: #658E15;
   -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
   -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
