notepad not showing in heroku test

--- a/css/drag_drop.css
+++ b/css/drag_drop.css
@@ -273,7 +273,7 @@ display: none;
 
 
     #notepad {
-      display:none;
+      /*display:none;*/
       bottom:0;
     position:fixed;
     z-index:150;
