added share btn to Q3

--- a/css/dragdrop_pairs.css
+++ b/css/dragdrop_pairs.css
@@ -228,4 +228,8 @@ display: none;
  
 }
 
-
+.entypo-export {
+  color: #505050 !important;
+   background: #fff !important;
+   font-weight: normal !important;
+}
