--- a/css/drag_drop.css
+++ b/css/drag_drop.css
@@ -215,12 +215,13 @@
 }
 
 #welldone_species, #welldone_cities, #welldone_countries, #welldone_biology, #welldone_space  {
-  height: 320px;
+  /*height: 320px;*/
   background-color: #FFF;
   float: left;
-  border-radius: 5px;
-  margin-top: 40px;
-   margin-left: 30px;
+  border-radius: 0px;
+  margin-top: 0px;
+   margin-left: -15px;
+   
    z-index: 11;
   position: absolute;
 display: none;
