--- a/css/fonts.css
+++ b/css/fonts.css
@@ -155,6 +155,16 @@ margin-top: 10px;
 margin-left: 0px;
 }
 
+.flipcard_heading{
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+ /*font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;*/
+font-size: 18pt;
+color: #CC0099;
+margin-top: 0px;
+margin-left: 10px;
+margin-bottom: 20px;
+}
+
 .facts_font_bw {
 font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 font-size: 18pt;
