--- a/css/quiz.css
+++ b/css/quiz.css
@@ -283,6 +283,10 @@ div[class*="emphasize-"] {
   margin-left: 30px;
 }
 
+.margin_left_card{
+  margin-left: 10px;
+}
+
 .margin_right_30{
   margin-right: 30px;
 }
