--- a/css/drag_drop.css
+++ b/css/drag_drop.css
@@ -221,7 +221,7 @@
   border-radius: 0px;
   margin-top: -38px;
    margin-left: -15px;
-   
+   padding-bottom: 18px;
    z-index: 11;
   position: absolute;
 display: none;
