--- a/css/fonts.css
+++ b/css/fonts.css
@@ -165,6 +165,16 @@ margin-left: 10px;
 margin-bottom: 20px;
 }
 
+.flipcard_heading15{
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+ /*font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;*/
+font-size: 15pt;
+color: #000;
+margin-top: 0px;
+margin-left: 10px;
+margin-bottom: 20px;
+}
+
 .flipcard_text{
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
  /*font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;*/
