--- a/css/notepad.css
+++ b/css/notepad.css
@@ -19,6 +19,7 @@ notepad {
   background: url("http://extremecss.com/demos/paper.jpg") center center no-repeat;
   overflow-y: scroll;
   margin-bottom: 10px;
+  /*added below for shadow on notepad*/
    -moz-box-shadow:    1px 1px 50px 1px #000;
   -webkit-box-shadow: 1px 1px 50px  1px #000;
   box-shadow:         1px 1px 50px 1px  #000;
